fix(mobile): Fix issue with mobile alignment

--- a/src/sass/controls/_pf-ui-elements.scss
+++ b/src/sass/controls/_pf-ui-elements.scss
@@ -58,6 +58,10 @@
     &:first-child {
         padding-left: 2%;
     }
+
+    &.pf-mobile {
+        height: 100%;
+    }
 }
 
 .pf-ui-wrapper-right {
